src/objects/loan_ix__Ixaris_logins__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Funding_Account_Reference__c</fullName>
        <label>Funding Account Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Api_Key__c</fullName>
        <label>Api Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Base_Url__c</fullName>
        <label>Base Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Card_Factory__c</fullName>
        <label>Card Factory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Community__c</fullName>
        <label>Community</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Currency__c</fullName>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ix__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ixaris logins</label>
</CustomObject>